# cop4520-final-project

./: .gitignore  Cargo.toml  README.md  env  keystore-4545a73d-c81a-4e89-b59d-ac9839fdc185.json  medium_sized_file.txt  run
.github/workflows/: rust.yml
docs/: Untitled.ipynb  documentation.aux  documentation.dvi  documentation.fdb_latexmk  documentation.fls  documentation.ps  documentation.tex  execution-data.csv
docs/sequential/: create_file.java  keystore-1689f835-be3d-4bea-9b5c-63cce2d9a676.json  keystore-33281b96-fd70-4ef9-b111-bc8a1db6feb3.json  keystore-7886723e-962a-4ae4-a38f-713e222a1f7e.json  keystore-92bbeaad-2550-4254-95c4-a49795239acb.json  keystore-ae18705a-e652-4087-9cc7-5132dd3ca051.json  run  script  time10.txt  time15.txt  time20.txt  time5.txt
docs/sequential/results-sequential-w-upload/: time10.txt  time15.txt  time20.txt  time5.txt
docs/sequential/src/: aws.rs  cli_args.rs  crypto.rs  main.rs
results-parallel-w-upload/: time10.txt  time15.txt  time20.txt  time5.txt
src/: aws.rs  cli_args.rs  crypto.rs  main.rs
