[package]
name = "cop4520-final-rpoject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
itertools = "0.10.1"
async-std = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
alphanumeric-sort = "1.4.4"
tokio = { version = "1.17.0", features = ["full"] }
rust-s3 = "0.30.0"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
